CSS URL reference bugs squashed.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -15,7 +15,7 @@
 
 body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  background: white url('../resources/graphics/background.png') repeat;
+  background: white url('resources/graphics/background.png') repeat;
 }
 
 em {
